--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta property="og:title" content="Fast path finding library ngraph.path" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/anvaka/ngraph.path.demo/master/docs/preview_large.png" />
-    <meta property="og:description" content="This is a demo of path finding algorithm for generic graphs." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/kuanb/ngraph.path.demo/master/docs/preview_large.png" />
+    <meta property="og:description" content="Modification of a demo of path finding algorithm for generic graphs." />
 
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta name="Description" content="This is a demo of path finding algorithm for generic graphs.">
     <meta name="keywords" content="a star, nba star, a*, path finding, shortest path, graph, map, visualization" />
-    <meta name="author" content="Andrei Kashcha">
+    <meta name="author" content="Kuan Butts">
     <title>Fast path finding library ngraph.path</title>
 <style>
 * {
@@ -26,7 +26,7 @@ body {
   top: 0;
 
   margin: 0;
-  background: rgb(12, 41, 82);
+  background: rgb(255, 255, 255);
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -36,13 +36,5 @@ body {
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-47259320-1', 'anvaka.github.io');
-  ga('send', 'pageview');
-</script>
   </body>
 </html>
